--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./app/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     },
     "target": "es5",
