--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "pnpm": {
-      "overrides": {
-          "@opentelemetry/api": "1.4.1",
-          "@opentelemetry/core": "1.13.0",
-          "@opentelemetry/exporter-trace-otlp-grpc": "0.39.1",
-          "@opentelemetry/resources": "1.13.0",
-          "@opentelemetry/sdk-trace-base": "1.13.0",
-          "@opentelemetry/sdk-trace-node": "1.13.0",
-          "@opentelemetry/semantic-conventions": "1.13.0"
-      }
+    "overrides": {
+      "@opentelemetry/api": "1.4.1",
+      "@opentelemetry/core": "1.13.0",
+      "@opentelemetry/exporter-trace-otlp-grpc": "0.39.1",
+      "@opentelemetry/resources": "1.13.0",
+      "@opentelemetry/sdk-trace-base": "1.13.0",
+      "@opentelemetry/sdk-trace-node": "1.13.0",
+      "@opentelemetry/semantic-conventions": "1.13.0"
+    }
   },
   "dependencies": {
     "@types/node": "20.4.1",
@@ -33,6 +33,10 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.10.0",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
