--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "rel": "pnpm install && pnpm lint && pnpm build && pnpm start"
   },
   "pnpm": {
     "overrides": {
@@ -24,7 +25,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "contentlayer": "^0.3.4",
+    "contentlayer": "^0.3.2",
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
