--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "rehype-pretty-code": "^0.10.0",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "remark-mdx-images": "^2.0.0",
     "shiki": "^0.14.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
