--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "shiki": "^0.14.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
